# hypermodern-imc-python

./: .gitignore  noxfile.py  pyproject.toml  readme.md
src/hypermodern_imc/: console.py
src/tests/: test_console.py
