[tool.poetry]
name = "hypermodern_imc"
version = "0.1.0"
description = ""
authors = ["Leandro Cruvinel Lemes"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"

[tool.poetry.scripts]
hypermodern_imc = "hypermodern_imc.console:main"
[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
branch = true
source = ["src/"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

